src/styles/common.scss
@use "sass:meta";

#saypi-callButton.disabled svg path.background {
  fill: rgb(245 238 223); /* bg-cream-550 */
}

#saypi-enter-button {
  margin-left: 6px; /* create some space between the discover button and the focus button */
}
.saypi-exit-button,
.settings-button.mini {
  width: 3rem;
  height: 3rem;
  padding: 6px;
  border: 0;
  z-index: 60;
  svg {
    path.outer {
      fill: rgb(237 225 209); /* bg-cream-550 */
    }
    path.inner {
      color: rgb(13 60 38); /* text-primary-700 */
    }
    circle.outer-circle-bg {
      fill: rgb(237 225 209); /* bg-cream-550 */
    }
  }
}
.settings-button.maxi svg circle.outer-circle-bg {
  /* make the settings button transparent in sidebar */
  display: none;
}

/* hide the control panel buttons on non-chat pages */
.saypi-control-panel.overflow-hidden {
  .saypi-control-button {
    display: none;
  }
}


#saypi-lock-panel {
  /* lock panel is only displayed on mobile devices */
  display: none;
}

@include meta.load-css("./progress-ring.scss");
@include meta.load-css("./neon.scss");
@include meta.load-css("./notifications.scss");
@include meta.load-css("./voices.scss");

